--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -69,7 +69,7 @@ jobs:
         run: pip install -r dev-requirements.txt
 
       - name: deploy to staging
-        run: pollination-apps deploy . --tag ${{needs.release-on-github.outputs.tag}} --owner ladybug-tools -n ${{github.event.repository.name}} -e staging -m "${{github.event.commits[0].message}}"
+        run: pollination-apps deploy app --tag ${{needs.release-on-github.outputs.tag}} --owner ladybug-tools -n ${{github.event.repository.name}} -e staging -m "${{github.event.commits[0].message}}"
         
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -105,7 +105,7 @@ jobs:
           TAG=$(echo "${TAG:?}" | sed 's/[[:space:]]//g')
           TAG=${TAG%%-*}
           echo $TAG
-          pollination-apps deploy . --tag $TAG --owner ladybug-tools -n ${{github.event.repository.name}} -e production -m "${{github.event.commits[0].message}}"
+          pollination-apps deploy app --tag $TAG --owner ladybug-tools -n ${{github.event.repository.name}} -e production -m "${{github.event.commits[0].message}}"
 
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
